Patching now works perfectly for Heart